--- a/crates/keyhunter-core/Cargo.toml
+++ b/crates/keyhunter-core/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0"
 walkdir = "2.5"
 regex = { version = "1.10", default-features = true }
+regex-automata = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
